[tool.poetry]
name = "vpn"
version = "0.2.0"
description = ""
authors = ["Angus Hollands <goosey15@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
traitlets = "^5.0.5"

[tool.poetry.scripts]
vpn = 'vpn:main'

[tool.poetry.dev-dependencies]
black = "^21.5b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
